<resources>
    <string name="app_name">Mediatheque</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>

    <string name="menu_music">Music</string>
    <string name="menu_book">Book</string>
    <string name="menu_movie">Movie</string>
    <string name="add_music_description">Add music</string>
    <string name="add_book_description">Add book</string>
    <string name="add_movie_description">Add movie</string>

    <string name="username">Username</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Do not have an account yet ?</string>
    <string name="register">Register</string>
    <string name="reset_password">You forget your password ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_registered">Already registered ?</string>

    <string name="create_account">Create an account</string>

    <string name="title_resetPassword">Reset your password</string>
    <string name="reset_it">Reset it</string>
    <string name="already_reset">already reset ?</string>
    <string name="search">Search</string>

    <string name="add">Add</string>

    <string name="name_of_the_author">Name of the author</string>
    <string name="first_name_of_the_author">First name of the author</string>
    <string name="title_of_the_book">Title of the book</string>
    <string name="type_of_book">Type of book</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="add_a_book">Add a book</string>
    <string name="publisher_s_name">Publisher\'s name</string>
    <string name="date_of_publication">Date of publication</string>

    <string name="add_a_movie">Add a movie</string>
    <string name="name_of_the_director">Name of the director</string>
    <string name="firstname_of_the_director">Firstname of the director</string>
    <string name="movie_title">Movie title</string>
    <string name="type_of_movie">Type of movie</string>
    <string name="duration_of_the_movie">Duration of the film (in minutes)</string>
    <string name="production_companies">Production companies</string>
    <string name="release_date">Release date</string>

    <string name="title_book_cardview">Title</string>
    <string name="nameoftheauthor_book_cardview">NameOfTheAuthor</string>
    <string name="firstnameoftheauthor_book_cardview">FirstNameOfTheAuthor</string>
    <string name="typeofthebook_book_cardview">TypeOfTheBook</string>
    <string name="publishersname_book_cardview">PublishersName</string>
    <string name="dateofpublication_book_cardview">DateOfPublication</string>
    <string name="datepublication_book_cardview">DatePublication</string>

    <string name="title_movie_cardview">Title</string>
    <string name="nameofthedirector_movie_cardview">NameOfTheDirector</string>
    <string name="firstnameofthedirector_movie_cardview">FirstNameOfTheDirector</string>
    <string name="typeofthemovie_movie_cardview">TypeOfTheMovie</string>
    <string name="productioncompanies_movie_cardview">ProductionCompanies</string>
    <string name="releasedate_movie_cardview">ReleaseDate</string>
    <string name="durationofthemovie_movie_cardview">DurationOfTheMovie</string>

    <string name="add_a_music">Add a music</string>
    <string name="name_of_the_artist">Name of the artist</string>
    <string name="firstname_of_the_artist">Firstname of the artist</string>
    <string name="music_title">Music title</string>
    <string name="album_title">Album title</string>
    <string name="genre_of_music">Genre of music</string>
    <string name="duration_of_the_music">Music duration (in seconds)</string>
    <string name="name_of_the_label">Name of the label</string>
    <string name="music_release_date">Music release date</string>

    <string name="title_music_cardview">Title</string>
    <string name="albumtitle_music_cardview">AlbumTitle</string>
    <string name="slash_music_cardview">/</string>
    <string name="nameoftheartist_music_cardview">NameOfTheArtist</string>
    <string name="firstnameoftheartist_music_cardview">FirstNameOfTheArtist</string>
    <string name="genreofmusic_music_cardview">GenreOfMusic</string>
    <string name="durationofthemusic_music_cardview">DurationOfTheMusic</string>
    <string name="nameofthelabel_music_cardview">NameOfTheLabel</string>
    <string name="musicreleasedate_music_cardview">MusicReleaseDate</string>

</resources>