<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connection.LoginActivity"

    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMail_LoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword_LoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"

            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin_LoginPage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/reset_password" />

        <TextView
            android:id="@+id/textViewResetPassword_LoginPage"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="3dp"
            android:text="@string/reset_it"
            android:textColor="#264653"
            android:textStyle="bold"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/textViewRegister_LoginPage"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp"
            android:text="@string/register"
            android:textColor="#264653"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</LinearLayout>