<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitleOfTheMusic_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_music_cardview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#264653"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/textViewSlash_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash_music_cardview"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/textViewAlbumTitle_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albumtitle_music_cardview"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNameOfTheArtist_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameoftheartist_music_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/textViewFirstNameOfTheArtist_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/firstnameoftheartist_music_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewGenreOfMusic_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genreofmusic_music_cardview"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNameOfTheLabel_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameofthelabel_music_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewMusicReleaseDate_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musicreleasedate_music_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewDurationOfTheMusic_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durationofthemusic_music_cardview"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>