<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_music">

    <fragment
        android:id="@+id/nav_music"
        android:name="com.example.mediatheque.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.mediatheque.ui.book.BookFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.example.mediatheque.ui.movie.MovieFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie" />
</navigation>