<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitleOfTheBook_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_book_cardview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#264653"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNameOfTheAuthor_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameoftheauthor_book_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/textViewFirstNameOfTheAuthor_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/firstnameoftheauthor_book_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewTypeOfTheBook_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeofthebook_book_cardview"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPublishersName_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publishersname_book_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewDateOfPublication_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateofpublication_book_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewNumberOfPages_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datepublication_book_cardview"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>