<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitleOfTheMovie_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_movie_cardview"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#264653"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNameOfTheDirector_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameofthedirector_movie_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/textViewFirstNameOfTheDirector_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/firstnameofthedirector_movie_cardview"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewTypeOfTheMovie_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeofthemovie_movie_cardview"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProductionCompanies_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productioncompanies_movie_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/textViewReleaseDate_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releasedate_movie_cardview"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/textViewDurationOfTheMovie_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durationofthemovie_movie_cardview"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>