<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.music.MusicAddUpdate"

    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/titleMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/add_a_music"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/editTextMusicTitle_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/music_title"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editTextAlbumTitle_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/album_title"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/editTextNameOfTheArtist_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_the_artist"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editTextFirstNameOfTheArtist_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstname_of_the_artist"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/editTextGenreOfMusic_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genre_of_music"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editTextDurationOfTheMusic_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/duration_of_the_music"
            android:inputType="number"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/editTextNameOfTheLabel_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_the_label"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editTextMusicReleaseDate_AddMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/music_release_date"
            android:inputType="date"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd_AddMusic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

</LinearLayout>